# AIO-Kebbi

./: .gitignore  AGENTS.md  README.md  WWW_SERVICE_GUIDE.md
.github/workflows/: release.yml
backend/: .env.example  .gitignore  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml
backend/.devcontainer/: devcontainer.json  docker-compose.dev.yml
backend/.devcontainer/auth/: devcontainer.json  docker-compose.dev.yml
backend/.devcontainer/chat/: devcontainer.json  docker-compose.dev.yml
backend/.devcontainer/food_detect/: devcontainer.json  docker-compose.dev.yml
backend/.devcontainer/fraud/: devcontainer.json  docker-compose.dev.yml
backend/.devcontainer/push_notification/: devcontainer.json  docker-compose.dev.yml
backend/auth/: Dockerfile  README.md  pyproject.toml
backend/auth/src/: main.py
backend/chat/: Dockerfile  downloadModels.sh  pyproject.toml
backend/chat/src/: main.py
backend/chat/src/db_manager/: __init__.py  database.py  pyproject.toml
backend/chat/src/dialogue/: __init__.py  conversation_manager.py  pyproject.toml
backend/chat/src/food_recognition/: __init__.py
backend/chat/src/llm_pipeline/: __init__.py  pipeline.py  pyproject.toml
backend/chat/src/tts_service/: __init__.py  tts_service.py
backend/db/: 00-users.sql  01-tokens.sql  02-llm_dialogue.sql  03-fraud_dialogue.sql  04-push_notifications.sql
backend/docs/: CALL_TIMER_FEATURE.md  INTEGRATION_SUMMARY.md  POSTMAN_TESTING_GUIDE.md  start_web.sh  test_www.sh
backend/food_detect/: FoodRecognitionService.py  pyproject.toml
backend/fraud/: .env.example  Dockerfile.lightweight  README.md  anti_fraud_postman_collection.json  docker-compose.yml  pyproject.toml  start.sh  start_service.sh  test_fraud_service.py  test_imports.py
backend/fraud/src/: main.py
backend/fraud/src/db_manager/: __init__.py  database.py
backend/fraud/src/dialogue/: __init__.py  conversation_manager.py
backend/fraud/src/food_recognition/: __init__.py
backend/fraud/src/llm_pipeline/: .gitignore  __init__.py  gpt_pipeline.py  pipeline.py  pyproject.toml
backend/fraud/src/llm_pipeline/patched_tokenizer_llama31/: chat_template.jinja
backend/fraud/src/tts_service/: tts_service.py
backend/nginx/: nginx.conf
backend/push_notification/: pyproject.toml
backend/push_notification/src/: main.py
backend/push_notification/src/db_manager/: __init__.py  database.py
backend/socket_gateway/: pyproject.toml
backend/tts/: pyproject.toml
backend/wei_tts/: TTSService.py
backend/www/: Dockerfile-backup  README.md  pyproject.toml
backend/www/src/: main.py
backend/www/static/css/: style.css
backend/www/static/js/: auth.js  call.js  mic-processor.js
backend/www/templates/: base.html  call.html  index.html  login.html  register.html
docs/: API_SPEC.md
frontend/: .gitignore  pubspec.yaml
frontend/android/: build.gradle.kts
frontend/assets/: filtered_terms.json  mock_call.json  mock_seq.json
frontend/kebbi_fraud_detect_app_test/: .gitignore  README.md  pubspec.yaml
frontend/lib/: constants.dart  main.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
(+53 files in other folders)
