[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "db-manager",
    "dialogue",
    "fastapi>=0.128.0",
    "llm-pipeline",
    "setuptools>=80.9.0",
    "uvicorn>=0.40.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[tool.uv.workspace]
members = [
    "src/dialogue",
    "src/llm_pipeline",
    "src/db_manager",
]

[tool.uv.sources]
dialogue = { workspace = true }
llm-pipeline = { workspace = true }
db-manager = { workspace = true }
